--- a/index.html
+++ b/index.html
@@ -811,7 +811,23 @@
             <span class="q">1</span>
             <button class="inc" aria-label="Increase quantity">+</button>
           </div>
-          <button class="btn primary add">Add to cart</button>
+          <!-- PayPal Buy Now Button -->
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+  <input type="hidden" name="cmd" value="_xclick">
+  <input type="hidden" name="business" value="kuntzeemily@gmail.COM">
+  <input type="hidden" name="item_name" value="Retatrutide (Kit)">
+  <input type="hidden" name="amount" value="149.00">
+  <input type="hidden" name="currency_code" value="USD">
+
+  <input type="hidden" name="no_note" value="1">
+  <input type="hidden" name="shipping" value="9.95">
+  <input type="hidden" name="bn" value="PP-BuyNowBF">
+
+  <button type="submit" class="btn primary">
+    Buy Now with PayPal
+  </button>
+</form>
+
         </div>
       </div>
     </article>
