--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 class="paypal-form"
               >
                 <input type="hidden" name="cmd" value="_xclick">
-                <input type="hidden" name="business" value="YOUR_PAYPAL_BUSINESS_EMAIL">
+                <input type="hidden" name="business" value="kuntzeemily@gmail.com">
                 <input type="hidden" name="currency_code" value="USD">
 
                 <input type="hidden" name="item_name" value="Reta Trutide – Research Product (Includes Essentials)">
