--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <input type="hidden" name="business" value="kuntzeemily@gmail.com">
                 <input type="hidden" name="currency_code" value="USD">
 
-                <input type="hidden" name="item_name" value="Reta Trutide – Research Product (Includes Essentials)">
+                <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
                 <input type="hidden" name="amount" value="149.00">
                 <input type="hidden" name="shipping" value="9.95">
                 <input type="hidden" name="quantity" value="1">
