--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <h3>Reta Trutide</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
-                <div class="price" id="retaPriceDisplay">$149.00</div>
+                <div class="price" id="retaPriceDisplay">$100.00</div>
               </div>
 
               <p class="product-desc">
@@ -147,9 +147,11 @@
                 <input type="hidden" name="business" value="kuntzeemily@gmail.com">
                 <input type="hidden" name="currency_code" value="USD">
 
-                <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
-                <input type="hidden" name="amount" value="149.00">
-                <input type="hidden" name="shipping" value="9.95">
+                <input type="hidden" name="item_name" value="Reta Trutide – Research Product (Includes Essentials)">
+                                <input type="hidden" name="item_number" value="FL-RT">
+                <input type="hidden" name="custom" value="Includes essentials">
+<input type="hidden" name="amount" value="100.00">
+                <input type="hidden" name="shipping" value="0.00">
                 <input type="hidden" name="quantity" value="1">
 
                 <input type="hidden" name="no_note" value="1">
