--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </p>
 
           <div class="cta-row">
-            <a class="btn primary" href="#shop">Shop Reta Trutide</a>
+            <a class="btn primary" href="#shop">Shop Retatrutide</a>
             <a class="btn" href="#different">What’s different</a>
           </div>
 
@@ -104,7 +104,7 @@
         <div class="section-head">
           <div>
             <h2>Shop</h2>
-            <p class="section-sub">Reta Trutide is live. Other products are listed as <strong>Coming Soon</strong>.</p>
+            <p class="section-sub">Retatrutide is live. Other products are listed as <strong>Coming Soon</strong>.</p>
           </div>
           <span class="pill mini">Tip: edit price + PayPal email in the code</span>
         </div>
@@ -120,7 +120,7 @@
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Reta Trutide</h3>
+                  <h3>Retatrutide</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
                 <div class="price" id="retaPriceDisplay">$100.00</div>
@@ -147,7 +147,7 @@
                 <input type="hidden" name="business" value="kuntzeemily@gmail.com">
                 <input type="hidden" name="currency_code" value="USD">
 
-                <input type="hidden" name="item_name" value="Reta Trutide – Research Product (Includes Essentials)">
+                <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
                                 <input type="hidden" name="item_number" value="FL-RT">
                 <input type="hidden" name="custom" value="Includes essentials">
 <input type="hidden" name="amount" value="100.00">
