Update product name and pricing in index.html

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
   <!-- Sticky Nav -->
   <header class="site-header" id="top">
     <div class="container nav">
-      <a class="brand" href="#top" aria-label="Forge Labs home">
-        <span class="logo" aria-hidden="true"></span>
-        <span class="brand-text">
-          <span class="brand-name">Forge Labs</span>
-          <span class="brand-sub">Fitness-focused research supply</span>
-        </span>
-      </a>
+     <a class="brand" href="#top" aria-label="Forge Labs home">
+  <img
+    src="/assets/logo-forge-labs.svg"
+    alt="Forge Labs logo"
+    class="logo-img"
+  />
 
+  <span class="brand-text">
+    <span class="brand-name">Forge Labs</span>
+    <span class="brand-sub">Fitness-focused research supply</span>
+  </span>
+</a>
       <nav class="nav-links" aria-label="Primary">
         <a href="#shop">Shop</a>
         <a href="#different">Why us</a>
@@ -46,7 +50,7 @@
           </p>
 
           <div class="cta-row">
-            <a class="btn primary" href="#shop">Shop Reta Trutide</a>
+            <a class="btn primary" href="#shop">Shop Retatrutide</a>
             <a class="btn" href="#different">What’s different</a>
           </div>
 
@@ -104,26 +108,34 @@
         <div class="section-head">
           <div>
             <h2>Shop</h2>
-            <p class="section-sub">Reta Trutide is live. Other products are listed as <strong>Coming Soon</strong>.</p>
+            <p class="section-sub">Retatrutide is live. Other products are listed as <strong>Coming Soon</strong>.</p>
           </div>
-          <span class="pill mini">Tip: edit price + PayPal email in the code</span>
         </div>
 
         <div class="product-grid">
           <!-- Live product -->
-          <article class="product-card">
-            <div class="product-thumb">
-              <span class="tag">Live</span>
-              <div class="thumb-art">RETA</div>
-            </div>
+  <article class="product-card">
+  <a
+    href="/products/reta"
+    class="product-link"
+    aria-label="View RETA product"
+  >
+    <div class="product-thumb">
+      <span class="tag">Live</span>
+      <img
+        src="/assets/products/reta-thumb.png"
+        alt="RETA peptide vial"
+        class="thumb-img"
+      />
+    </div>
 
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Reta Trutide</h3>
+                  <h3>Retatrutide</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
-                <div class="price" id="retaPriceDisplay">$100.00</div>
+                <div class="price" id="retaPriceDisplay">$115.00</div>
               </div>
 
               <p class="product-desc">
@@ -147,11 +159,11 @@
                 <input type="hidden" name="business" value="kuntzeemily@gmail.com">
                 <input type="hidden" name="currency_code" value="USD">
 
-                <input type="hidden" name="item_name" value="Reta Trutide – Research Product (Includes Essentials)">
-                                <input type="hidden" name="item_number" value="FL-RT">
+                <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
+                <input type="hidden" name="item_number" value="FL-RT">
                 <input type="hidden" name="custom" value="Includes essentials">
-<input type="hidden" name="amount" value="100.00">
-                <input type="hidden" name="shipping" value="0.00">
+                <input type="hidden" name="amount" value="115.00">
+                <input type="hidden" name="shipping" value="4.95">
                 <input type="hidden" name="quantity" value="1">
 
                 <input type="hidden" name="no_note" value="1">
