Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container nav">
      <a class="brand" href="#top" aria-label="Forge Labs home">
   <img
-    src="/assets/logo-forge-labs.svg"
+    src="/assets/images/forgelabslogo.png"
     alt="Forge Labs logo"
     class="logo-img"
   />
@@ -116,14 +116,14 @@
           <!-- Live product -->
   <article class="product-card">
   <a
-    href="/products/reta"
+    href="/assets/images/retaproduct.png"
     class="product-link"
     aria-label="View RETA product"
   >
     <div class="product-thumb">
       <span class="tag">Live</span>
       <img
-        src="/assets/products/reta-thumb.png"
+        src="/assets/images/retaproduct.png"
         alt="RETA peptide vial"
         class="thumb-img"
       />
