Update image paths to relative URLs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container nav">
      <a class="brand" href="#top" aria-label="Forge Labs home">
   <img
-    src="/assets/images/forgelabslogo.png"
+    src="./assets/images/forgelabslogo.png"
     alt="Forge Labs logo"
     class="logo-img"
   />
@@ -118,7 +118,7 @@
   <div class="product-thumb">
     <span class="tag">Live</span>
     <img
-      src="/assets/images/retaproduct.png"
+      src="./assets/images/retaproduct.png"
       alt="RETA peptide vial"
       class="thumb-img"
     />
