--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container nav">
      <a class="brand" href="#top" aria-label="Forge Labs home">
   <img
-    src="./assets/images/forgelabslogo.png"
+    src="./assets/images/logopfp.png"
     alt="Forge Labs logo"
     class="logo-img"
   />
