Update product description to emphasize full kit

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <h1>Built for people who train.</h1>
           <p class="sub">
-            A clean storefront for <strong>research products</strong> with a streamlined kit that
+            A clean storefront for <strong>research products</strong> with the full kit that
             <strong>includes essentials</strong>—less setup, less guesswork, more consistency.
           </p>
 
@@ -134,7 +134,7 @@
               </div>
 
               <p class="product-desc">
-                Streamlined kit built for disciplined, performance-minded customers who value simplicity and consistency.
+                Full kit built for disciplined, performance-minded customers who value simplicity and consistency.
               </p>
 
               <ul class="chips" aria-label="Highlights">
