--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <article class="product-card">
             <div class="product-thumb alt">
               <span class="tag ghost">Coming soon</span>
-              <div class="thumb-art">TRU</div>
+              <div class="thumb-art">MT-2</div>
             </div>
             <div class="product-body">
               <div class="product-top">
@@ -199,7 +199,7 @@
           <article class="product-card">
             <div class="product-thumb alt2">
               <span class="tag ghost">Coming soon</span>
-              <div class="thumb-art">NEXT</div>
+              <div class="thumb-art">GKU-CU</div>
             </div>
             <div class="product-body">
               <div class="product-top">
