--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Trutide (Coming Soon)</h3>
+                  <h3>MT-2 (Coming Soon)</h3>
                   <p class="muted small">Includes essentials • Launching soon</p>
                 </div>
                 <div class="price muted">$—</div>
@@ -204,7 +204,7 @@
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Next Product (Coming Soon)</h3>
+                  <h3>GKU-CU (Coming Soon)</h3>
                   <p class="muted small">Includes essentials • Launching soon</p>
                 </div>
                 <div class="price muted">$—</div>
