--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <div class="hero-card hero-left">
           <div class="pill"><span class="dot"></span> Clear policies • Fast processing • Discreet packaging</div>
 
-          <h1>Built for people who train.</h1>
+          <h1>Built for people who’ve done the work — and still feel stuck.</h1>
           <p class="sub">
-            A clean storefront for <strong>research products</strong> with the full kit that
-            <strong>includes essentials</strong>—less setup, less guesswork, more consistency.
+You train. You eat clean. You’ve tried cutting, tracking, “dialing it in,” and starting over more times than you can count.
+Forge Labs exists for people who care about their health and performance — but are tired of spinning their wheels.
           </p>
 
           <div class="cta-row">
             <a class="btn primary" href="#shop">Shop Retatrutide</a>
-            <a class="btn" href="#different">What’s different</a>
+            <a class="btn" href="#different">Why this is different</a>
           </div>
 
           <div class="trust-row" aria-label="Trust badges">
@@ -96,7 +96,7 @@
               <span class="pill mini">No chaos</span>
             </div>
             <div class="bar" aria-hidden="true"><div style="--w:77%"></div></div>
-            <p class="note">Short policies + straight FAQs = fewer tickets and fewer disputes.</p>
+            <p class="note">Clear policies and short FAQs because you shouldn’t need a support ticket to understand what you’re buying.</p>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
         <div class="section-head">
           <div>
             <h2>What makes us different</h2>
-            <p class="section-sub">You’re paying for less work and a smoother experience—without the extra sourcing steps.</p>
+            <p class="section-sub">You’re paying for less work and a smoother experience, without the extra sourcing steps.</p>
           </div>
         </div>
 
@@ -256,7 +256,7 @@
           <div class="diff-card">
             <h3>Fitness-focused supply</h3>
             <p class="muted">
-              Built for disciplined, performance-driven customers who value efficiency, clarity, and consistency.
+              This isn’t for extremes. It’s for people who train, care about their health, and want a cleaner, more disciplined system that actually fits real life.
             </p>
           </div>
         </div>
@@ -294,16 +294,33 @@
             <p>Orders typically process same or next business day. Transit times vary by location and carrier.</p>
           </details>
         </div>
+          <details class="faq">
+            <summary>What's the difference between Retatrutide, Tirzepatide, and GLP-1??</summary>
+            <p>GLP-1s are foundational, Tirzepatide adds GIP for a powerful dual action, and Retatrutide adds glucagon for a "triple-G" approach, potentially leading to deeper metabolic changes and more significant fat reduction. Essentially, Retatrutide combines both, which results in significantly increased results. </p>
+          </details>
+        </div>
 
         <div class="panel" style="margin-top:14px;">
           <h3>Restock & launch alerts</h3>
           <p class="muted">Drop your email. We’ll only ping you for restocks and launches.</p>
 
-          <form class="email-row" id="emailForm">
-            <input type="email" id="emailInput" placeholder="you@email.com" required />
-            <button class="btn primary" type="submit">Notify me</button>
-          </form>
-          <div class="small" id="emailMsg" aria-live="polite"></div>
+<form
+  class="email-row"
+  id="emailForm"
+  action="https://formspree.io/f/xbddgnvy"
+  method="POST"
+>
+  <input
+    type="email"
+    id="emailInput"
+    name="email"
+    placeholder="you@email.com"
+    required
+  />
+  <button class="btn primary" type="submit">Notify me</button>
+</form>
+<div class="small" id="emailMsg" aria-live="polite"></div>
+
         </div>
       </div>
     </section>
