--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@ Forge Labs exists for people who care about their health and performance — but
           <article class="product-card">
             <div class="product-thumb alt2">
               <span class="tag ghost">Coming soon</span>
-              <div class="thumb-art">GKU-CU</div>
+              <div class="thumb-art">GHK-CU</div>
             </div>
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>GKU-CU (Coming Soon)</h3>
+                  <h3>GHK-CU (Coming Soon)</h3>
                   <p class="muted small">Includes essentials • Launching soon</p>
                 </div>
                 <div class="price muted">$—</div>
