Refactor FAQ section for improved structure

--- a/index.html
+++ b/index.html
@@ -274,31 +274,33 @@ Forge Labs exists for people who care about their health and performance — but
         </div>
 
         <div class="faq-grid">
-          <details class="faq">
-            <summary>What are these products intended for?</summary>
-            <p>Products sold on this website are intended for <strong>research and laboratory use only</strong>. Not for human consumption.</p>
-          </details>
+  <details class="faq">
+    <summary>What are these products intended for?</summary>
+    <p>Products sold on this website are intended for <strong>research and laboratory use only</strong>. Not for human consumption.</p>
+  </details>
 
-          <details class="faq">
-            <summary>Do orders include anything extra?</summary>
-            <p>Yes—orders are packaged with <strong>essentials</strong> to reduce setup work. Details are provided in your order confirmation.</p>
-          </details>
+  <details class="faq">
+    <summary>Do orders include anything extra?</summary>
+    <p>Yes—orders are packaged with <strong>essentials</strong> to reduce setup work. Details are provided in your order confirmation.</p>
+  </details>
 
-          <details class="faq">
-            <summary>How does checkout work?</summary>
-            <p>Checkout is handled via PayPal. After purchase, you’ll receive a PayPal confirmation with shipping details and your receipt.</p>
-          </details>
+  <details class="faq">
+    <summary>How does checkout work?</summary>
+    <p>Checkout is handled via PayPal. After purchase, you’ll receive a PayPal confirmation with shipping details and your receipt.</p>
+  </details>
 
-          <details class="faq">
-            <summary>Shipping timeline?</summary>
-            <p>Orders typically process same or next business day. Transit times vary by location and carrier.</p>
-          </details>
-        </div>
-          <details class="faq">
-            <summary>What's the difference between Retatrutide, Tirzepatide, and GLP-1??</summary>
-            <p>GLP-1s are foundational, Tirzepatide adds GIP for a powerful dual action, and Retatrutide adds glucagon for a "triple-G" approach, potentially leading to deeper metabolic changes and more significant fat reduction. Essentially, Retatrutide combines both, which results in significantly increased results. </p>
-          </details>
-        </div>
+  <details class="faq">
+    <summary>Shipping timeline?</summary>
+    <p>Orders typically process same or next business day. Transit times vary by location and carrier.</p>
+  </details>
+
+  <!-- ✅ move this one INSIDE the grid -->
+  <details class="faq">
+    <summary>What's the difference between Retatrutide, Tirzepatide, and GLP-1?</summary>
+    <p>GLP-1s are foundational, Tirzepatide adds GIP for a powerful dual action, and Retatrutide adds glucagon for a "triple-G" approach, potentially leading to deeper metabolic changes and more significant fat reduction.</p>
+  </details>
+</div>
+
 
         <div class="panel" style="margin-top:14px;">
           <h3>Restock & launch alerts</h3>
