--- a/index.html
+++ b/index.html
@@ -332,7 +332,11 @@ Forge Labs exists for people who care about their health and performance — but
     <div class="container">
       <div class="footer-grid">
         <div class="brand footer-brand">
-          <span class="logo" aria-hidden="true"></span>
+            <img
+    src="./assets/images/logopfp.png"
+    alt="Forge Labs logo"
+    class="logo-img"
+  />
           <span class="brand-text">
             <span class="brand-name">Forge Labs</span>
             <span class="brand-sub">Fitness-focused research supply</span>
@@ -344,6 +348,10 @@ Forge Labs exists for people who care about their health and performance — but
           Not for human consumption. No medical claims are made or implied.
         </div>
       </div>
+      <div class="footer-contact">
+  <span>Questions?</span>
+  <a href="tel:+13146493059">(314) 649-3059</a>
+</div>
 
       <div class="footer-bottom">
         <div>© <span id="year"></span> Forge Labs</div>
