--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ Forge Labs exists for people who care about their health and performance — but
       </div>
       <div class="footer-contact">
   <span>Questions?</span>
-  <a href="tel:+13146493059">(314) 649-3059</a>
+  <a href="sms:+13146493059">(314) 649-3059</a>
 </div>
 
       <div class="footer-bottom">
