--- a/index.html
+++ b/index.html
@@ -225,6 +225,56 @@ Forge Labs exists for people who care about their health and performance — but
       </div>
     </section>
 
+   <section class="focus" id="focus">
+  <div class="focus__container">
+    <header class="focus__head">
+      <h2 class="focus__title">Peptide focus areas</h2>
+      <p class="focus__sub">
+        Key categories to help you quickly understand how our catalogue is structured.
+        The examples below are indicative only — the full list is available in the pricing sheet.
+      </p>
+    </header>
+
+    <div class="focus__grid">
+      <!-- Card 1 -->
+      <article class="focus-card">
+        <div class="focus-card__top">
+          <span class="focus-card__icon" aria-hidden="true">💊</span>
+          <h3 class="focus-card__title">Metabolic &amp; GLP-1</h3>
+        </div>
+        <p class="focus-card__desc">
+          Peptides that act on appetite, blood sugar and weight management, with a responsible approach.
+        </p>
+        <div class="focus-card__chips" aria-label="Examples">
+          <span class="chip">Semaglutide</span>
+          <span class="chip">Tirzepatide</span>
+          <span class="chip">Retatrutide</span>
+        </div>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="focus-card">
+        <div class="focus-card__top">
+          <span class="focus-card__icon" aria-hidden="true">🧠</span>
+          <h3 class="focus-card__title">Skin &amp; Recovery</h3>
+        </div>
+        <p class="focus-card__desc">
+Peptides commonly researched for skin integrity, tissue repair, and recovery support — often explored in aesthetic, wellness, and performance-adjacent research contexts.
+        </p>
+        <div class="focus-card__chips" aria-label="Examples">
+          <span class="chip">GHK-Cu</span>
+          <span class="chip">MT-2</span>
+        </div>
+      </article>
+
+    </div>
+
+    <p class="focus__footnote">
+      These are some of the most requested compounds. Your catalogue may include a broader list accessible via the full pricing sheet.
+    </p>
+  </div>
+</section>
+ 
     <!-- What makes us different -->
     <section class="section" id="different">
       <div class="container">
