Update FAQ details for weight loss medications

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
   <!-- ✅ move this one INSIDE the grid -->
   <details class="faq">
-    <summary>What's the difference between Retatrutide, Tirzepatide, and GLP-1?</summary>
-    <p>GLP-1s are foundational, Tirzepatide adds GIP for a powerful dual action, and Retatrutide adds glucagon for a "triple-G" approach, potentially leading to deeper metabolic changes and more significant fat reduction.</p>
+    <summary>What's the difference between Retatrutide, Tirzepatide, and Semaglutide?</summary>
+    <p>Semaglutide (GLP-1), Tirzepatide (GLP-1/GIP), and Retatrutide (GLP-1/GIP/Glucagon) are incretin mimetics for weight loss, differing in the hormones they activate, with Retatrutide offering a "triple-agonist" approach for potentially the most significant weight loss, followed by Tirzepatide, and then Semaglutide.</p>
   </details>
 </div>
 
