Update footnote text in index.html

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     </div>
 
     <p class="focus__footnote">
-      These are some of the most requested compounds. Your catalogue may include a broader list accessible via the full pricing sheet.
+      These are some of the most requested compounds. Not seeing a product you were looking for? Contact us and put in a request!
     </p>
   </div>
 </section>
