Update product details and add lab tests section
Updated product name and modified fine print for clarity. Added a new section for lab tests and quality assurance with relevant details.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Forge Labs exists for people who care about their health and performance — but
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Retatrutide</h3>
+                  <h3>Retatrutide (10mg)</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
                 <div class="price" id="retaPriceDisplay">$115.00</div>
@@ -165,7 +165,7 @@ Forge Labs exists for people who care about their health and performance — but
                 <input type="hidden" name="bn" value="PP-BuyNowBF">
 
                 <button type="submit" class="btn primary full">Buy Now with PayPal</button>
-                <p class="fineprint">Opens PayPal checkout in a new tab.</p>
+                <p class="fineprint">Shipping fees may vary at checkout.</p>
               </form>
             </div>
           </article>
@@ -309,7 +309,65 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
         </div>
       </div>
     </section>
+<section class="lab" id="lab">
+  <div class="lab__container">
+    <div class="lab__grid">
+      <!-- Left: copy -->
+      <div class="lab__content">
+        <h2 class="lab__title"><span class="lab__bar" aria-hidden="true"></span>Lab tests &amp; quality assurance</h2>
 
+        <p class="lab__sub">
+          Every batch is accompanied by supplier-provided laboratory documentation to support identity and purity
+          checks prior to release.
+        </p>
+
+        <ul class="lab__list">
+          <li>Verification of identity and basic purity metrics (per supplier documentation)</li>
+          <li>Batch-linked COA available for each product run</li>
+          <li>Traceability by batch number when provided</li>
+          <li>Documents provided on request or linked when available</li>
+        </ul>
+
+        <div class="lab__actions">
+          <a class="btn btn--ghost lab__btn" href="#shop">View available products</a>
+
+          <!-- Replace href with your hosted COA PDF link (or a drive link) -->
+          <a class="btn lab__btn" href="assets/docs/sample-coa.pdf" target="_blank" rel="noopener">
+            View sample lab report
+          </a>
+        </div>
+
+        <p class="lab__note">
+          Note: Documentation is supplied by our manufacturing partners. This is not medical advice and these
+          materials are not intended for diagnostic or therapeutic use.
+        </p>
+      </div>
+
+      <!-- Right: “Sample lab report” card -->
+      <aside class="lab-card" aria-label="Sample lab report preview">
+        <div class="lab-card__kicker">SAMPLE LAB REPORT</div>
+
+        <div class="lab-card__rows">
+          <div class="lab-card__row">
+            <div class="lab-card__label">Measured purity</div>
+            <div class="lab-card__value">99.1%</div>
+          </div>
+          <div class="lab-card__row">
+            <div class="lab-card__label">Critical impurities</div>
+            <div class="lab-card__value">&lt;0.1%</div>
+          </div>
+        </div>
+
+        <div class="lab-card__meta">
+          <div><span class="lab-card__metaLabel">Batch:</span> FL-GLP1-2026-01</div>
+          <div><span class="lab-card__metaLabel">Lab:</span> Supplier documentation</div>
+        </div>
+      </aside>
+    </div>
+  </div>
+</section>
+
+    
     <!-- FAQ + Email -->
     <section class="section" id="faq">
       <div class="container">
