--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
           <!-- Replace href with your hosted COA PDF link (or a drive link) -->
           <a class="btn lab__btn" href="./assets/images/COA_Retatrutide.pdf" target="_blank" rel="noopener">
-            View sample lab report
+            View lab report
           </a>
         </div>
 
@@ -345,12 +345,12 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
       <!-- Right: “Sample lab report” card -->
       <aside class="lab-card" aria-label="Sample lab report preview">
-        <div class="lab-card__kicker">SAMPLE LAB REPORT</div>
+        <div class="lab-card__kicker">LAB REPORT</div>
 
         <div class="lab-card__rows">
           <div class="lab-card__row">
             <div class="lab-card__label">Measured purity</div>
-            <div class="lab-card__value">99.1%</div>
+            <div class="lab-card__value">99.78%</div>
           </div>
           <div class="lab-card__row">
             <div class="lab-card__label">Critical impurities</div>
@@ -359,7 +359,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
         </div>
 
         <div class="lab-card__meta">
-          <div><span class="lab-card__metaLabel">Batch:</span> FL-GLP1-2026-01</div>
+          <div><span class="lab-card__metaLabel">Batch:</span> FL-RETA-2025-11</div>
           <div><span class="lab-card__metaLabel">Lab:</span> Supplier documentation</div>
         </div>
       </aside>
