Update COA PDF link in index.html

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
           <a class="btn btn--ghost lab__btn" href="#shop">View available products</a>
 
           <!-- Replace href with your hosted COA PDF link (or a drive link) -->
-          <a class="btn lab__btn" href="./assets/images/COA_Retatrutide.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="btn lab__btn" href="./assets/COA_Retatrutide.pdf" target="_blank" rel="noopener noreferrer">
             View lab report
           </a>
         </div>
