Add access section with pricing and support cards

--- a/index.html
+++ b/index.html
@@ -366,6 +366,72 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     </div>
   </div>
 </section>
+<section class="access" id="access">
+  <div class="access__container">
+    <header class="access__head">
+      <h2 class="access__title">
+        <span class="access__bar" aria-hidden="true"></span>
+        Access our pricing & support
+      </h2>
+      <p class="access__sub">
+        Pricing, availability, and support are centralized for a simple and fast experience.
+      </p>
+    </header>
+
+    <div class="access__grid">
+      <!-- Card 1: Pricing -->
+      <article class="access-card access-card--featured">
+        <div class="access-card__badge" aria-label="Most popular">Most popular</div>
+
+        <div class="access-card__top">
+          <div class="access-card__icon" aria-hidden="true">📄</div>
+          <h3 class="access-card__title">Peptide pricing list</h3>
+        </div>
+
+        <p class="access-card__desc">
+          View our current products with up-to-date pricing, availability, formats, and conditions.
+        </p>
+
+        <div class="access-card__actions">
+          <a class="access-btn access-btn--primary" href="./assets/pricinglist.pdf" target="_blank" rel="noopener">
+            View pricing list
+          </a>
+          <a class="access-btn" href="./assets/pricinglist.pdf" target="_blank" rel="noopener">
+            Download PDF
+          </a>
+        </div>
+      </article>
+
+      <!-- Card 2: Contact -->
+      <article class="access-card">
+        <div class="access-card__top">
+          <div class="access-card__icon" aria-hidden="true">🎯</div>
+          <h3 class="access-card__title">Contact support</h3>
+        </div>
+
+        <p class="access-card__desc">
+          Reach out directly for order help, availability questions, or batch documentation requests.
+        </p>
+
+        <div class="access-card__actions access-card__actions--stack">
+          <a class="access-btn access-btn--outline" href="mailto:kuntzeemily@gmail.com">
+            ✉️ Email support
+          </a>
+
+          <!-- Optional: if you use SMS/text -->
+          <a
+  class="access-btn access-btn--green"
+  href="https://wa.me/13146861973?text=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."
+  target="_blank"
+  rel="noopener"
+>
+  Message Us on WhatsApp
+</a>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
 
     
     <!-- FAQ + Email -->
