--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
           <!-- Optional: if you use SMS/text -->
           <a
   class="access-btn access-btn--green"
-  href="https://wa.me/13146861973?text=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."
+  href="sms:+13146861973?&body=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."
   target="_blank"
   rel="noopener"
 >
