Update text and structure in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Forge Labs exists for people who care about their health and performance — but
 
           <div class="cta-row">
             <a class="btn primary" href="#shop">Shop Retatrutide</a>
-            <a class="btn" href="#different">Why this is different</a>
+            <a class="btn" href="#different">Why we're different</a>
           </div>
 
           <div class="trust-row" aria-label="Trust badges">
@@ -228,7 +228,7 @@ Forge Labs exists for people who care about their health and performance — but
    <section class="focus" id="focus">
   <div class="focus__container">
     <header class="focus__head">
-      <h2 class="focus__title">Peptide focus areas</h2>
+      <h2 class="focus__title">Peptide Focus Areas</h2>
       <p class="focus__sub">
         Key categories to help you quickly understand how our catalogue is structured.
         The examples below are indicative only — the full list is available in the pricing sheet.
@@ -276,39 +276,46 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 </section>
  
     <!-- What makes us different -->
-    <section class="section" id="different">
-      <div class="container">
-        <div class="section-head">
-          <div>
-            <h2>What makes us different</h2>
-            <p class="section-sub">You’re paying for less work and a smoother experience, without the extra sourcing steps.</p>
-          </div>
-        </div>
+   <section class="why" id="why">
+  <div class="why__container">
+    <header class="why__head">
+      <h2 class="why__title">
+        <span class="why__bar" aria-hidden="true"></span>
+        What Makes Forge Labs Different
+      </h2>
+      <p class="why__sub">
+        Built on consistency, transparent sourcing documentation, and responsive support.
+      </p>
+    </header>
 
-        <div class="diff-grid">
-          <div class="diff-card">
-            <h3>Includes essentials</h3>
-            <p class="muted">
-              Most customers end up needing the same core extras. We bundle the essentials so you can get started right away.
-            </p>
-          </div>
+    <div class="why__grid">
+      <article class="why-card">
+        <div class="why-card__icon" aria-hidden="true">✓</div>
+        <h3 class="why-card__title">Verified documentation</h3>
+        <p class="why-card__desc">Supplier-provided COAs available for batches when provided.</p>
+      </article>
 
-          <div class="diff-card">
-            <h3>Less setup, less guesswork</h3>
-            <p class="muted">
-              Our pricing is higher because the experience is simpler. Fewer steps. Fewer mistakes. Less back-and-forth.
-            </p>
-          </div>
+      <article class="why-card">
+        <div class="why-card__icon" aria-hidden="true">🔒</div>
+        <h3 class="why-card__title">Secure checkout</h3>
+        <p class="why-card__desc">Streamlined payment flow designed to be simple and reliable.</p>
+      </article>
 
-          <div class="diff-card">
-            <h3>Fitness-focused supply</h3>
-            <p class="muted">
-              This isn’t for extremes. It’s for people who train, care about their health, and want a cleaner, more disciplined system that actually fits real life.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+      <article class="why-card">
+        <div class="why-card__icon" aria-hidden="true">🌍</div>
+        <h3 class="why-card__title">Fast delivery</h3>
+        <p class="why-card__desc">Quick turnaround with tracking updates when shipped.</p>
+      </article>
+
+      <article class="why-card">
+        <div class="why-card__icon" aria-hidden="true">💬</div>
+        <h3 class="why-card__title">Real support</h3>
+        <p class="why-card__desc">Direct help for orders, availability, and documentation requests.</p>
+      </article>
+    </div>
+  </div>
+</section>
+
 <section class="lab" id="lab">
   <div class="lab__container">
     <div class="lab__grid">
