--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Forge Labs exists for people who care about their health and performance — but
                   <h3>Retatrutide (10mg)</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
-                <div class="price" id="retaPriceDisplay">$115.00</div>
+                <div class="price" id="retaPriceDisplay">$120.00</div>
               </div>
 
               <p class="product-desc">
@@ -157,8 +157,8 @@ Forge Labs exists for people who care about their health and performance — but
                 <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
                 <input type="hidden" name="item_number" value="FL-RT">
                 <input type="hidden" name="custom" value="Includes essentials">
-                <input type="hidden" name="amount" value="115.00">
-                <input type="hidden" name="shipping" value="4.95">
+                <input type="hidden" name="amount" value="120.00">
+                <input type="hidden" name="shipping" value="20.00">
                 <input type="hidden" name="quantity" value="1">
 
                 <input type="hidden" name="no_note" value="1">
@@ -321,7 +321,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     <div class="lab__grid">
       <!-- Left: copy -->
       <div class="lab__content">
-        <h2 class="lab__title"><span class="lab__bar" aria-hidden="true"></span>Lab tests &amp; quality assurance</h2>
+        <h2 class="lab__title"><span class="lab__bar" aria-hidden="true"></span>Lab Tests &amp; Quality Assurance</h2>
 
         <p class="lab__sub">
           Every batch is accompanied by supplier-provided laboratory documentation to support identity and purity
@@ -378,7 +378,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     <header class="access__head">
       <h2 class="access__title">
         <span class="access__bar" aria-hidden="true"></span>
-        Access our pricing & support
+        Access Our Pricing & Support
       </h2>
       <p class="access__sub">
         Pricing, availability, and support are centralized for a simple and fast experience.
